--- a/src/style/sprites.scss
+++ b/src/style/sprites.scss
@@ -289,4 +289,11 @@
 	width: 32px;
 	height: 22px;
 }
+.bg-mail {
+  width:  32px;
+  height: 21px;
+
+   background: url ('css_sprites.png') -10px -10px;
+
+}
 
