--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -747,15 +747,15 @@ margin-top: 60px;
 }
 &__img1{
 
-    //width: 334px;
+    width: 334px;
     height: 334px;
     //margin-left: 25px;
-    margin-bottom: 54px;
+    //margin-bottom: 74px;
 //margin-top: -10px;
 }
 &__img2{
 
-    //width: 334px;
+    width: 334px;
     height: 334px;
     //margin-left: 25px;
     //margin-bottom: 40px;
@@ -774,6 +774,12 @@ margin-top: 60px;
     background-color: #ffffff;
     margin-left: 50px;
 }
+&__detail{
+  display: flex;
+  flex-direction: column;
+
+}
+
 &__title{
     @include textLg(20px, 700);
     line-height:1.2;
@@ -814,6 +820,7 @@ padding-bottom: 150px;
 line-height: 1.4;
     margin-top: 8px;
 }
+
 }
 }
 .player-video {
@@ -905,7 +912,7 @@ body{
   }
 
 &__title {
-text-align: center;
+//text-align: center;
   @include textLg(53px, 700);
   //padding: 93px 0px 95px 0px;
   background: #f1f1f1;
@@ -950,44 +957,52 @@ margin-top: 70px;
 }
 &__img1{
 
-  width: 316px;
-  height: 462px;
-  margin-right: 30px;
+  //width: 316px;
+ height: 462px;
+  //margin-right: 30px;
   //margin-top: 10px;
 }
 &__img2{
 
-  width: 316px;
+  //width: 316px;
   height: 462px;
-  margin-right: 30px;////
+  //margin-right: 30px;////
   //margin-top: 10px;
 }
+
+
 &__item{
+  //flex-basis: 40%;
 //margin-right: 20px;
   //width: 100%;
-  display: flex;
-  flex-direction:column;
+  //display: flex;
+  //flex-direction:column;
   //flex-wrap: wrap;
 //align-items: flex-end;
   //margin-left: -311px;////
-  width: 316px;
-  height:auto;
+ width: 316px;
+  //height: auto;
   //margin-top: 480px;
   border: 1px solid #ececec;
   background-color: #ffffff;
+  height: 660px;
 }
 &__title{
   @include textLg(20px, 700);
   line-height:1.2;
+ //margin-top: 27px;
 }
 &__descr{
+  //display: flex;
+ //align-items: center;
   @include textLg(15px, 400);
   line-height:2;
   color:$darkGray;
   border-bottom: 1px solid #ececec;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
   width: 256px;
   margin-left: 27px;
+  //margin-top: 40px;
 }
 &__descr--line{
  @include textLg(15px, 400);
@@ -997,14 +1012,19 @@ margin-top: 70px;
   padding-bottom: 15px;
   width: 256px;
   margin-left: 27px;
+  //margin-top: 0px;
+  //padding-bottom: px;
 }
-.catalog-price{
-  width: 256px;
+
+
+
+
+
   &__number{
     margin-left: -2px;
-    margin-top: 3px;
+    //margin-top: 3px;
   }
-}
+
 }
 .player-video{
     width: 1055px;
@@ -1031,7 +1051,7 @@ margin-top: 95px;
 }
 &__link-pic{
 margin-left: 50px;
-margin-top: 47px;
+margin-top: 43px;
 }
 
 .video-page{
