добавлена вторая разделительная линия, отредактирован тег picture

--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -62,7 +62,7 @@ padding: 32px;
 padding: 0;
         &__inner{
          width: 668px;
-        margin: 150px 0 0 50px;   
+        margin: 0 auto;   
         }
         
 
