--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -24,9 +24,7 @@
       	@include textLg(13px, 400);
       line-height: 1.8;
         color: #444444;
-			//height: 140px;
-				//line-height: calc(28/13);
-				//padding: 0px 26px 0 38px;
+			
 margin-bottom: 20px;
 margin-left: 30px;
 		}
@@ -46,7 +44,7 @@ margin-left: 30px;
 				//height: 180px;
 				display: flex;
         flex-direction: column;
-
+flex-wrap: wrap;
 margin-bottom: 0px;
 		}
 
@@ -56,7 +54,7 @@ margin-bottom: 0px;
 				@include titleSm;
 				line-height: calc(16/17);
 				color: $greenLeft;
-        flex-basis: 35px;
+height: 35px;
         	//flex-basis:25px;
 		}
 &__input--radio:not(checked){
@@ -66,16 +64,13 @@ display: none;
   //position: relative;
   padding-left: 63px;
   top: 0px;
-  width: 180px;
+ // width: 180px;
   display: flex;
   padding-top: 16px;
 
 }
-	//&__input--radio {
-	  //position: relative;
-	  //top: 0px;
-	  //left: 0px;
-	//}
+
+
 
 
 
@@ -103,13 +98,7 @@ width: 16px;
 height: 16px;
 background-color:#63d1bb;
 border-radius:50%;
-//display: none;
-//position: absolute;
-				//content: '';
-				//width: 16px;
-				//height: 16px;
-				//border: 1px solid black;
-				//border-radius: 50%;
+
     }
 
 &__label--radio {
@@ -172,7 +161,16 @@ border-radius:50%;
   display: flex;
   padding-left: 63px;
   padding-top: 20px;
+
 }
+&__grupp--checkbox {
+  flex-direction: column;
+  display: flex;
+  //padding-left: 63px;
+  //padding-top: 1px;
+}
+
+
 &__input--checkbox:not(checked)+label::before {
 
   content: '';
@@ -237,6 +235,27 @@ padding:15px 0px 14px 10px;
 margin-bottom: 9px;
 
 }
+&__data{
+  width: 100%;
+//margin-bottom: 0px;
+}
+&__legend--phone {
+
+  @include titleSm;
+  line-height: calc(16/17);
+  color: $greenLeft;
+  text-transform: uppercase;
+  //margin-top: 70px;
+}
+&__legend--email {
+  @include titleSm;
+  line-height: calc(16/17);
+  color: $greenLeft;
+  text-transform: uppercase;
+  margin-top: 10px;
+  //margin-left: 30px;
+}
+
 
 &__input--phone,&__input--email{
  @include textLg(18px, 400);
@@ -249,8 +268,8 @@ margin-bottom: 9px;
  border-bottom:2px solid #000;
  width: 250px;
  padding:15px 0px 14px 10px;
- margin-bottom: 10px;
-margin-top: -8px;
+ margin-bottom: 22px;
+margin-top: 10px;
 margin-left: 10px;
 }
 &__inner--phone::before {
@@ -283,7 +302,7 @@ z-index: 3;
   position: absolute;
   z-index: 2;
   margin-left: 230px;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 
@@ -324,13 +343,357 @@ margin-left: 29px;
 @media (min-width: 768px){
 
 		.form-page{
+      &__title--block{
+ display: flex; //height: 120px;
+ margin-top: 0px;
+ height: 217px;
 
-				&__inner{
-						display: flex;
-				}
 
-				&__legend::after{
-						opacity: 0;
-				}
+
+      }
+&__title{
+  text-align: center;
+  @include textLg(43px, 700); //padding:95px 0px 70px 0px;
+  background: #f1f1f1;
+  line-height:1.1;
+  margin-top: 60px;
+
+}
+&__title-line:after {
+  content: "";
+  display: block;
+  position: relative;
+  background-repeat: repeat;
+  height: 10px;
+  background-size: 33px 14px;
+  background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
+  right: 0;
+  left: 0px; //bottom: 44px;//возможно тоже надо править
+  transform: rotate(-180deg);
+  bottom: 25px;
+}
+&__text {
+  width: 612px;
+  @include textLg(17px, 400);
+  line-height: 1.7;
+  margin-left: 50px;
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+&__legend::after,
+&__legend--checkbox::after {
+
+  display: none;
+}
+&__inner--radio{
+display: flex;
+//flex-direction:row;
+}
+
+
+&__section--radio {
+  margin-left: 68px;
+ margin-bottom: 20px;
+ height: 200px;
+}
+		&__legend::after {
+		  display: none;
+
+  }
+  &__legend{
+    margin-left: 20px;
+  }
+&__label--radio{
+  //width: 100%;
+  display: flex;
+  margin-left: 117px;
+  margin-top: -48px;
+
+}
+		&__label--radio::before {
+		  content: '';
+		  position: absolute;
+		  top: -6px;
+		  left: 0;
+		  width: 50px;
+		  height: 50px;
+		  border: 2px solid #444444;
+		  border-radius: 50%;
+		  background: #fff;
+		}
+
+		&__input--radio:checked+&__label--radio::after {
+		  content: '';
+		  position: absolute;
+		  top: 10px;
+		  left: 16px;
+		  width: 22px;
+		  height: 22px;
+		  background-color: #63d1bb;
+		  border-radius: 50%; //opacity: 0;
+		}
+
+		&__label--radio {
+		  position: relative;
+		  @include textLg(19px, 700);
+		  line-height: 0.9;
+		  left: 0px;
+		  cursor: pointer;
+		}
+
+&__input--radio:not(checked)+&__label--radio {
+  position: relative;
+  padding-left: 83px;
+  top: 0px; // width: 180px;
+  display: flex;
+  padding-top: 10px;
+}
+
+&__filedset--checkbox {
+
+
+
+ width: 100%;
+margin: 0 auto;
+;
+display: flex;
+
+}
+
+&__inner--checkbox {
+
+height: 304px;
+  background-color: #f1f1f1;
+
+  margin: 0 auto;
+
+   margin-top: -50px;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+&__legend--checkbox{
+
+  margin-left: 30px;
+  margin-top: 60px;
+
+
+}
+&__grupp--checkbox{///////
+margin-top: 30px;
+display: flex;
+  //flex-direction: column;
+  flex-wrap: wrap;
+  width: 550px;
+flex-direction: row;
+  height: 225px;
+  margin-left: 120px;
+
+}
+&__section--checkbox {
+height: 50px;
+width: 140px;
+display: flex;
+
+  margin-top: 20px;
+//width: 50px;
+//margin-left: 111px;
+//margin-bottom: 50px;
+padding-left: 0px;
+margin-right: 120px;
+
+
+}
+&__input--checkbox:not(checked)+label::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 50px;
+  height: 48px;
+  border: 2px solid #444444;
+  background: #fff;
+  //margin-left: 30px;
+  //margin-bottom: 20px;
+}
+&__label--checkbox {
+  @include textLg(19px, 700);
+  line-height: 0.9;
+
+}
+&__input--checkbox+label:after {
+  content: '';
+  height: 15px;
+  width: 28px;
+  border-left: 2px solid;
+  border-bottom: 2px solid;
+  transform: rotate(-45deg);
+  left: 12px;
+  top:12px;
+  //margin-top: 0px;
+}
+&__input--checkbox+label:after {
+  content: none;
+
+}
+&__input--checkbox:not(checked)+label {
+  //position: relative;
+  padding-left: 78px;
+  //top: 0px; // width: 180px;
+  //display: flex;
+  padding-top: 15px;
+}
+
+
+
+&__legend{
+  //margin-left: 20px;
+
+}
+
+&__section--name{
+  width: 100%;
+
+  margin-left: 145px;
+  margin-top: 5px;
+  margin-bottom: 70px;
+display: flex;
+
+//align-content: space-around;
+//align-self: flex-start;
+}
+&__label--name{
+  display: flex;
+  @include textLg(19px, 700);
+  line-height:0.9;
+  margin-left: 50px;
+  margin-top: -40px;
+
+}
+&__input--name{
+  width: 410px;
+  margin-bottom: -10px;
+  //height: 20px;
+  margin-top: -35px;
+  @include textLg(19px, 400);
+  line-height:0.9;
+  margin-left: 150px;
+
+}////
+&__data{
+  height: 228px;
+  background-color: #f1f1f1;
+margin-top: -65px;
+width: 100%;
+margin-bottom: 50px;
+}
+&__legend--phone{
+  margin-left: 30px;
+  //margin-top: 60px;
+  //margin-bottom: -60px;
+  	@include titleSm;
+  	line-height: calc(16/17);
+  	color: $greenLeft;
+text-transform: uppercase;
+margin-top: 70px;
+}
+&__legend--email{
+  	@include titleSm;
+  	line-height: calc(16/17);
+  	color: $greenLeft;
+  	text-transform: uppercase;
+margin-left: 30px;
+
+}
+&__inner--phone{
+  margin-top: 25px;
+display: flex;
+border: none
+
+
+}
+
+&__input--phone,
+&__input--email{
+   @include textLg(19px, 400);
+line-height: 0.9;
+
+  	color: $greenLeft;
+  	background-color: #f1f1f1;
+
+  width: 500px;
+  margin-left: 190px;
+  margin-top: -30px;
+  display: flex;
+margin-bottom: 35px;
+}
+&__inner--email::before {
+  content: '';
+  background: url('/src/img/css_sprites.png') -10px -10px;
+  width: 32px;
+  height: 21px;
+  position: absolute;
+  z-index: 2;
+  margin-top: 0px;
+  margin-left: 640px;
+}
+&__inner--phone::before {
+  content: '';
+  background: url('/src/img/sprites.png') -212px -263px;
+  width: 25px;
+  height: 24px;
+  position: absolute;
+  margin-top: 60px;
+  //display: block;
+  margin-left: 640px;
+  z-index: 2;
+}
+
+&__inner--phone:hover::before {
+  content: '';
+  background: url('/src/img/sprites.png') -264px -263px;
+  width: 25px;
+  height: 24px;
+  margin-top: 60px;
+  position: absolute;
+  margin-left: 640px;
+  z-index: 3;
+}
+&__textarea{
+
+  margin-left: 190px;
+  @include textLg(19px, 400);
+  width: 470px;
+padding: 13px 10px 90px 15px;
+margin-top: -50px;
+}
+&__btn{
+  margin-top: -40px;
+  width: 230px;
+  margin-left: 40px;
+  margin-bottom: 55px;
+  display: inline-block;
+  vertical-align: top;
+  //display: flex;
+  //flex-direction: row-reverse;
+
+}
+
+span{
+  display: flex;
+@include textLg(17px, 400);
+line-height: 1.7;
+margin-right: 40px;
+  margin-top: 50px;
+  justify-content: flex-end;
+}
+
+
+
+
+
+
+
+
 		}
 }
