--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -1,8 +1,8 @@
 .contacts {
 padding: 32px;
-    &__inner{
-        width: 260px; 
-    }
+    // &__inner{
+    //     width: 260px; 
+    // }
 
     &__title{
         @include titleContactMobile;
@@ -54,6 +54,10 @@ padding: 32px;
         margin: 20px 0 0 0;
     }
 
+}
+#map{
+    width: 100%;
+    height: 400px;
 }
 
 @media (min-width: 768px) {
