--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -8,10 +8,9 @@
    background: #f1f1f1;
    margin-top: 0px;
    margin-bottom: 24px;
-
+width: 100%;
 }
-
-		&__title{
+&__title{
 			@include textLg(27px, 700);
 				background-color: $frameMenu;
 				line-height: 1.1;
@@ -24,9 +23,9 @@
       	@include textLg(13px, 400);
       line-height: 1.8;
         color: #444444;
-			
-margin-bottom: 20px;
-margin-left: 30px;
+        margin-bottom: 20px;
+      margin-left: 30px;
+
 		}
 
 		&__filedset--radio{
@@ -347,7 +346,7 @@ margin-left: 29px;
  display: flex; //height: 120px;
  margin-top: 0px;
  height: 217px;
-
+width: 100%;
 
 
       }
@@ -373,7 +372,7 @@ margin-left: 29px;
   bottom: 25px;
 }
 &__text {
-  width: 612px;
+  //width: 612px;
   @include textLg(17px, 400);
   line-height: 1.7;
   margin-left: 50px;
@@ -453,9 +452,9 @@ display: flex;
 
 
 
- width: 100%;
+ //width: 100%;
 margin: 0 auto;
-;
+
 display: flex;
 
 }
@@ -546,13 +545,10 @@ margin-right: 120px;
 
 
 
-&__legend{
-  //margin-left: 20px;
 
-}
 
 &__section--name{
-  width: 100%;
+  //width: 100%;
 
   margin-left: 145px;
   margin-top: 5px;
