--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -23,7 +23,7 @@
 
     &__social {
         display: block;
-        //height: 80px;
+        height: 80px;//
         width: 195px;
         margin: 0 auto;
         text-align: center;
@@ -106,8 +106,8 @@
 
         &__inner{
           @include flexbox;
-          justify-content: space-around;
-          //flex-direction: row;
+          //justify-content: space-around;
+          flex-direction: row;//////
           height: 143px;
           align-items: center;
           margin: 0 auto;
@@ -115,8 +115,8 @@
         &__logo{
             display: inline-block;
             flex-basis: 27%;
-            //text-align: center;
-            margin-left: 20px;
+            text-align: center;/////////////
+           //margin-left: 0px;
         }
         &__logo-link{
             display: inline-block;
@@ -137,11 +137,11 @@
 	        height: 34px;
         }
         &__social{
-          //flex-basis: 43%;
+          flex-basis: 43%;
             //flex-basis: 46%;
             margin: 0;
             text-align: center;
-            margin-left: 30px;
+            //margin-left: 30px;
         }
     }
 }
