--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -3,10 +3,11 @@
   //display: block;
 //}
 .main-catalog {
-  width: 100%;
-  //margin:auto;
+  //width: 100%;
+  //margin: 0 auto;
 
 &__title--block{
+  width: 100%;
  display: flex;
   align-items: center;
   justify-content: center;
@@ -24,39 +25,39 @@ text-align: center;
 margin-top: 15px;
 }
 .catalog {
-  margin: 0 auto;
+
+  //width: 100%;
+  //margin: 0 auto;
 
 &__img{
-  width: 100%;
+  width: 70%;
+  height: 190px;
+  min-width: 260px;
+  //width: 100%;
+  //min-width: 260px;
   //width:260px;
     //height: 195px;
     //margin-left: 15px;
-height: auto;
-}
-&__img1{
-//width: 260px;
-    //height: 195px;
-    //margin-left: 15px;
-    //margin-top: -5px;
-    height: auto;
+//height: auto;
+
 
 }
-&__img2{
-//width: 260px;
-    //height: 195px;
-    //margin-left: 15px;
-    height: auto;
 
-}
 &__item {
+//height: 373px;
+overflow: hidden;
+//position: relative;
+//margin: 30px ;
 
-width: 258px;
+//width: 258px;
  //height: 179px;
   border: 1px solid #ececec;
   margin-left: 30px;
   margin-bottom: 30px;
+  margin-right: 30px;
   //margin-top: 0px;
   //width: 100%;
+  //min-width: 26%;
 }
 &__item:hover{
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
@@ -159,20 +160,33 @@ height: 18px;
 }
 .video-page {
 &__video img{
+  //width: 100%;
   //width: 260px;
   //height: 150px;
-margin-top: 10px;
+//margin-top: 10px;
 margin-left: 0px;
 
 }
+&__link{
+  //display: none;
+  border: none;
+
+  font-size: 0;
+
+}
+
 &__link-pic {
   background:url('/src/img/sprites.png') -739px -11px;
   width: 102px;
   height: 78px;
   cursor: pointer;
-  margin-top: -116px;
+  margin-top: 40px;
+  //padding-top: 20px;
+  //margin-top: 116px;
   margin-left: 79px;
   position: absolute;
+  //top: 0px;
+  border: none;
 }
 &__link-pic:hover{
   background:url('/src/img/sprites.png') -719px -93px;
@@ -229,7 +243,7 @@ opacity:0.8;
  left: 0;
   //margin-top: -150px;
   //margin-left: 0px;
-  //width: 100%;
+  width: 100%;
   width: 320px;
   height: 336px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
@@ -251,12 +265,20 @@ opacity:0.8;
   &__text {
     line-height: 30px;
     text-align: center;
-    margin-top: -15px;
+    //margin-top: -15px;
   }
   &__form {
-    width: 260px;
-    margin-top: 38px;
+      display: flex;
+//padding-right:20px ;
+   // width: 380px;
+    margin-top: 28px;
     margin-left: 30px;
+    margin-right: 10px;
+  }
+  &__form--group{
+
+//margin-left: 20px;
+padding-right:10px;
   }
   &__input {
     display: none;
@@ -272,15 +294,16 @@ opacity:0.8;
   &__size:hover {
     border: 2px solid #c7c7c7;
   }
-  &__size:focus {
-    border: 2px solid #63d1bb;
-  }
+
   &__size:active {
     border: 2px solid #63d1bb;
   }
   &__input:checked+&__size {
     border: 2px solid #63d1bb;
   }
+
+
+
   .modal-ctg__btn {
     width: 260px;
     height: 52px;
@@ -770,45 +793,27 @@ margin-top: 60px;
 
 @include flexbox;
     flex-wrap: wrap;
-    flex-direction: column;
+    //flex-direction: column;
     margin-top: 22px;
   //width: 760px;
 &__img{
 
-    width: 334px;
+    width: 50%;
     height: 334px;
     //margin-left: 0px;
     //margin-bottom: 64px;
 //margin-top: -8px;
+min-width: 334px;
 }
-&__img1{
 
-    width: 334px;
-    height: 334px;
-    //margin-left: 25px;
-    //margin-bottom: 74px;
-//margin-top: -10px;
-}
-&__img2{
-
-    width: 334px;
-    height: 334px;
-    //margin-left: 25px;
-    //margin-bottom: 40px;
-//margin-top: -10px;
-}
 &__item{
-//margin-top: 50px;
-//display: flex;
-//flex-direction: row;
-//align-items: flex-end;
-//justify-content: flex-end;
-    width:665px;
+width: 100%;
+    //width:665px;
   height: 334px;
     margin-top: 25px;
     border: 1px solid #ececec;
     background-color: #ffffff;
-    margin-left: 50px;
+    margin-left: 30px;
 }
 &__detail{
   display: flex;
@@ -876,8 +881,7 @@ line-height: 1.4;
     line-height: 1.2;
 
     margin-top: 30px;
-//margin-right: 50px;
-    //margin-right:20px;
+
     width: 241px;
 margin-left: 104px;
 }
@@ -893,20 +897,23 @@ margin-left: 104px;
 
 .video-page {
 &__video img {
-    background: url('/src/img/video-tablet-1x.jpg')no-repeat;
-    width: 668px;
+    background: url('/src/img/video-tablet-1x.jpg')no-repeat 50% 50%;
+    //width: 668px;
     height: 455px;
     margin-left: 0px;
     //margin-bottom: 39px;
-    margin-top: -20px;
+    margin-top: 0px;
     order: 1;
+    width: 100%;
+    //max-width: 668px;
+    min-width: 668px;
 }
 &__link-pic{
   width: 102px;
   height: 78px;
   cursor: pointer;
   background:url('/src/img/sprites.png') -739px -11px;
-  margin-top: -268px;
+  margin-top: 168px;
   //position: absolute;
   margin-left: 280px;
 }
@@ -940,11 +947,9 @@ body{
   //width: 100%;
   &__title--block{
 
-    //display: flex;
+
     height: 245px;
-    //width: 100%;
-    //width: 1150px;
-    //margin: 0 auto;
+
   }
 
 &__title {
@@ -954,10 +959,7 @@ body{
   background: #f1f1f1;
   line-height:1;
   margin-top: 40px;
-  //margin-top: 0px;
-  //text-align: center;
-//width: 100%;
-//margin: 0 auto;
+
 }
 &__title-line:after {
   content: "";
@@ -983,39 +985,16 @@ margin-top: 70px;
 &__img{
 
 //width: 100%;
-  width: 316px;
-  height: 462px;
-  //margin-left: 50px;
-  //margin-left: 35px;
-  //margin-left: 40px;
- //margin-top: 10px;
-  //margin-top: -19px;
-}
-&__img1{
-
-  //width: 316px;
- height: 462px;
-  //margin-right: 30px;
-  //margin-top: 10px;
-}
-&__img2{
-
   //width: 316px;
   height: 462px;
-  //margin-right: 30px;////
-  //margin-top: 10px;
+min-width: 316px;
+width: 100%;
 }
+
 
 
 &__item{
-  //flex-basis: 40%;
-//margin-right: 20px;
-  //width: 100%;
-  //display: flex;
-  //flex-direction:column;
-  //flex-wrap: wrap;
-//align-items: flex-end;
-  //margin-left: -311px;////
+//width: 100%;
  width: 316px;
 
   border: 1px solid #ececec;
@@ -1062,7 +1041,7 @@ margin-top: 70px;
 
 }
 .player-video{
-    width: 1055px;
+    width: 1075px;
     height: 455px;
     border: 1px solid #ececec;
     background-color: #ffffff;
@@ -1071,7 +1050,7 @@ margin-top: 70px;
     flex-direction: column;
     margin-top: 28px;
     margin-bottom: 105px;
-   margin-left: 90px;
+   margin-left: 70px;
 
 &__description {
 
@@ -1090,12 +1069,16 @@ margin-top: 43px;
 }
 
 .video-page{
-&__video img{
+&__video {
+  //position: relative;
 background:url('/src/img/video-desktop.png')no-repeat;
 width: 682px;
 height: 455px;
 margin-top: 0px;
 //margin-left: 0px;
+}
+&__link-pic{
+  margin-top: 180px;
 }
 &__descr{
 @include textLg(15px, 400);
