ссылки в меню на всю ширину, js перестал работать, возможно причина в галп файле, возможно в самих скриптах по отдельности, возможно в подлючении, я не знаю.

--- a/src/style/_fontface.scss
+++ b/src/style/_fontface.scss
@@ -5,8 +5,7 @@
     font-weight: 400;
     src: url('fonts/opensans-regular.woff2') format('woff2'),
          url('fonts/opensans-regular.woff') format('woff'),
-         url('fonts/OpenSans-Regular.ttf') format('ttf'),
-         url('fonts/opensans-regular.eot') format('eot'); 
+         url('fonts/OpenSans-Regular.ttf') format('ttf');
    
 }
 @font-face {
@@ -16,6 +15,5 @@
     font-weight: 700;
     src: url('fonts/opensans-bold.woff2') format('woff2'),
          url('fonts/opensans-bold.woff') format('woff'),
-         url('fonts/OpenSans-Bold.ttf') format('ttf'),
-         url('fonts/opensans-bold.eot') format('eot');
+         url('fonts/OpenSans-Bold.ttf') format('ttf');
 }
