--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -5,7 +5,7 @@
    justify-content: center;
    //min-width:320px;
    height:177px;
-   background: #f1f1f1;
+   background: $frameMenu;
    margin-top: 0px;
    margin-bottom: 24px;
 
@@ -13,11 +13,9 @@
 
 		&__title{
 			@include textLg(27px, 700);
-				background-color: $frameMenu;
 				line-height: 1.1;
 				text-align: center;
         margin-top: 20px;
-				border-top: 1px solid $frameMenu;
 		}
 
 		&__text{
@@ -83,7 +81,7 @@ width: 36px;
 height: 36px;
 border:2px solid #444444;
 border-radius:50%;
-background:#fff;
+// background:#fff;
 
 
 
@@ -546,10 +544,10 @@ margin-right: 120px;
 
 
 
-&__legend{
+// &__legend{
   //margin-left: 20px;
 
-}
+// }
 
 &__section--name{
   width: 100%;
