Забрал изменения от Кати.Исправил слайдер,но надо доработать.Небольшие изменения.

--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -156,7 +156,7 @@ position: absolute;
   padding-top: 20px;
 
 }
-&__grupp--checkbox {
+&__group--checkbox {
   flex-direction: column;
   display: flex;
   //padding-left: 63px;
@@ -472,7 +472,7 @@ height: 304px;
 
 
 }
-&__grupp--checkbox{///////
+&__group--checkbox{///////
 margin-top: 30px;
 display: flex;
   //flex-direction: column;
