--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -154,7 +154,7 @@ position: absolute;
   padding-top: 20px;
 
 }
-&__grupp--checkbox {
+&__group--checkbox {
   flex-direction: column;
   display: flex;
   //padding-left: 63px;
@@ -470,7 +470,7 @@ height: 304px;
 
 
 }
-&__grupp--checkbox{///////
+&__group--checkbox{///////
 margin-top: 30px;
 display: flex;
   //flex-direction: column;
