--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -237,7 +237,9 @@
   &__comment {
     @include descrTablet;
     width: 606px;
-    margin-bottom: 40px;
+    height: 170px;
+    margin: 20px 0 0 0;
+    // margin-bottom: 40px;
   }
 
   &__user {
@@ -323,6 +325,7 @@
 
     &__comment {
       width: 772px;
+      height: 155px;
     }
   }
 }
